--- a/src/app/components/presentacion/presentacion.component.html
+++ b/src/app/components/presentacion/presentacion.component.html
@@ -18,27 +18,19 @@
             ha extendido tanto y llaman ser front-end developer. 
             Pero para mi, no son mas que pluses que me conforman en una persona un 
             poco mas curiosa. Yo simplemente soy un maquetador un poco más curioso :), y 
-            que leñes creo que soy bueno si me centro en lo mio. Os voy 
-            a decir una cosa, vais a dejar que dejen de existir los 
-            maquetadores que sepan lo que hacen y utilicen buenas 
-            practicas, estructuras limpias y código css reutilizable por otros.
-            Y a vosotros programadores que os piden que hagais los estilos de las webs, 
-            pedid maquetadores, a ver si nos vamos a calentar nosotros y vamos a empezar 
-            a quitaros el curro a vosotros, y en vez de hacer funciones separadas en 5 
-            lineas nos vamos a poner a hacer un código espaguetti que no lo entienda ni 
-            el tato.
+            que leñes creo que soy bueno si me centro en lo mio.
         </p>
         <p>
-            Joer igual me estoy quedando demasiado agusto, voy a empezar por presentarme...
+            ¡Ups! Me lio y al final no me presento...
         </p>
         <p>
             Soy Endika, un apasionado de la maquetación, el diseño y las nuevas tecnologías. Aunque últimamente, también me esta enganchando en gran medida el desarrollo mediante los Frameworks de Javascript. 
         </p>
         <p>
-            Aun siendo un maquetador puro y no haberme forjado como programador en mi vida laboral, si que realice un grado superior de desarrollado web, gracias al cual, adquirí conocimientos de programación que hasta el día de hoy me han servido para poder facilitar el trabajo y la comunicación entre diseñadores y programadores.
+            Aun siendo un maquetador puro y no haberme forjado como programador en mi vida laboral, si que realice un grado superior de desarrollado web, gracias al cual, adquirí ciertos conocimientos de programación que hasta el día de hoy me han servido para poder facilitar el trabajo y la comunicación entre diseñadores y programadores.
         </p>
         <p>
-            Actualmente, ocupo una posición laboral como experto en maquetación y experiencia de usuario. Aun así, me mantengo a la escucha cuando aparecen nuevas oportunidades laborales que me permitan seguir creciendo junto a grandes personas y poder continuar teletrabajando. 
+            Actualmente, ocupo una posición laboral como experto en maquetación y experiencia de usuario. Aun así, me mantengo a la escucha cuando aparecen nuevas oportunidades laborales que me permitan seguir creciendo junto a grandes profesionales. 
         </p>
     </div>
     
