--- a/src/app/components/presentacion/presentacion.component.html
+++ b/src/app/components/presentacion/presentacion.component.html
@@ -1,6 +1,6 @@
 <div class="main-content__inner">
     <div class="presentation-content">
-        <h2>¡Hola, encantado de recibirte!</h2>
+        <h2>¡Hola, encantado de recibirte! d</h2>
         <p>
             Te aviso, en el siguiente texto voy a soltar un poco de chapa. Si prefieres saltártela ya que piensas que ojeando mi trabajo vas a conocerme mejor, adelante... <a [routerLink]="['/proyectos']">mis proyectos</a>.
         </p>
