--- a/src/app/components/presentacion/presentacion.component.html
+++ b/src/app/components/presentacion/presentacion.component.html
@@ -2,35 +2,16 @@
     <div class="presentation-content">
         <h2>¡Hola, encantado de recibirte!</h2>
         <p>
-            Te aviso, en el siguiente texto voy a soltar un poco de chapa. Si prefieres saltártela ya que piensas que ojeando mi trabajo vas a conocerme mejor, adelante... <a [routerLink]="['/proyectos']">mis proyectos</a>.
+            Te aviso, en el siguiente texto voy a soltar un poco de chapa, si prefieres saltarla porque piensas que ojeando mis trabajos vas a conocerme mejor, adelante... <a [routerLink]="['/proyectos']">mis proyectos</a>.
         </p>
         <p>
-            Antes de nada, si eres un recruiter o perteneces a RRHH y no te suena mi rol, te 
-            explico, soy maquetador web, no soy programador, repito <strong>¡Soy Maquetador!</strong>
-        </p>
-        <p>    
-            Si, vale que si continuas leyendo descubrirás 
-            que tengo nociones de programación porque se algo 
-            de Javascript, un poco más de Jquery, 
-            me meto por mi cuenta a desarrollar proyectos personales en 
-            angular (como este portafolio) o react, gestiono código con 
-            repositorios GIT,... si, lo sé, eso es lo que de hace ya unos años se 
-            ha extendido tanto y llaman ser front-end developer. 
-            Pero para mi, no son mas que pluses que me conforman en una persona un 
-            poco mas curiosa. Yo simplemente soy un maquetador un poco más curioso :), y 
-            que leñes creo que soy bueno si me centro en lo mio.
+            Soy Endika, un apasionado de la maquetación, el diseño y las nuevas tecnologías. Aunque llevo ya tiempo que también me está enganchando en gran medida el desarrollo mediante los Frameworks de Javascript. Prueba de ello es esta misma web, la cual ha sido creada mediante Angular queriendo cacharrear un poquillo.
         </p>
         <p>
-            ¡Ups! Me lio y al final no me presento...
+            Aun siendo un maquetador puro y no haberme forjado como programador en mi vida laboral, sí que realice un Grado Superior de Desarrollo de Aplicaciones Web (DAW), gracias al cual, adquirí ciertos conocimientos de programación que hasta el día de hoy me han servido para poder facilitar el trabajo y la comunicación entre diseñadores y programadores. Aunque insisto, no me considero programador, al menos por ahora. Sí que puedo decir, que sé lo bastante como para realizar labores avanzadas de maquetación, ya sea manipulando el DOM mediante Javascript o JQuery.
         </p>
         <p>
-            Soy Endika, un apasionado de la maquetación, el diseño y las nuevas tecnologías. Aunque últimamente, también me esta enganchando en gran medida el desarrollo mediante los Frameworks de Javascript. 
-        </p>
-        <p>
-            Aun siendo un maquetador puro y no haberme forjado como programador en mi vida laboral, si que realice un grado superior de desarrollado web, gracias al cual, adquirí ciertos conocimientos de programación que hasta el día de hoy me han servido para poder facilitar el trabajo y la comunicación entre diseñadores y programadores.
-        </p>
-        <p>
-            Actualmente, ocupo una posición laboral como experto en maquetación y experiencia de usuario. Aun así, me mantengo a la escucha cuando aparecen nuevas oportunidades laborales que me permitan seguir creciendo junto a grandes profesionales. 
+            Actualmente, ocupo una posición laboral como analista en maquetación web y experto en experiencia de usuario y diseño. Aun así, he de ser sincero al decir que mi principal pasión es la maquetación, y es por lo que me mantengo a la escucha cuando aparecen nuevas oportunidades laborales que me permitan seguir creciendo junto a grandes profesionales.
         </p>
     </div>
     
