--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,7 @@
 /*COLORS
 *************************************************/
 //BASE-COLORS
-$accent-color: #8ED3BB;
+$accent-color: #CFFF88;//#8ED3BB;
 $custom-white: #FFFFFF;
 
 //BG-COLORS
