--- a/src/app/components/conocimientos/conocimientos.component.html
+++ b/src/app/components/conocimientos/conocimientos.component.html
@@ -13,24 +13,24 @@
             <li>Micro-animaciones</li>
             <li>SEO Onpage</li>
             <li>BEM (Metodología Css)</li>
-            <li>Nociones de programación media</li>
-            <li>Scrum</li>
+            <li>Nociones de programación</li>
         </ul>
         <h2 class="green">
             Códigos que utilizo para maquetar
         </h2>
         <ul>
             <li>HTML</li>
-            <li>Css: Sass & Less</li>
+            <li>CSS: Sass & Less</li>
             <li>JQuery</li>
             <li>JavaScript</li>
-            <li>TypeScript (Básico)</li>
+            <li>TypeScript</li>
         </ul>
         <h2 class="red">
-            Frameworks y CMS's en los que maqueto
+            Frameworks y CMS's con los que he maquetado
         </h2>
         <ul>
             <li>Bootstrap 4 & 5</li>
+            <li>TailwindCss</li>
             <li>Angular v.13</li>
             <li>React v.16</li>
             <li>PrimeReact v.8</li>
@@ -77,7 +77,7 @@
           </swiper>
         <h2>E-Learning</h2>
         <ul>
-            <li>Master en Javascript <span>- Udemy</span></li>
+            <li>Máster en Javascript <span>- Udemy</span></li>
             <li>Gestión de código con GIT <span>- Udemy</span></li>
             <li>Metodologías CSS: BEM, OOCSS, POSTCSS <span>- Udemy</span></li>
             <li>Bootstrap avanzado <span>- Udemy</span></li>
