--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -1,7 +1,9 @@
+<p>Contacta conmigo a través de LinkedIn o e-mail. También puedes descargarte mi currículum en PDF.</p>
+
 <ul class="contact-container">
-  <li class="external-link">
+  <li>
     <a title="Se abrirá en una pestaña nueva del navegador" class="rrss rrss-linkedin" href="http://www.linkedin.com/in/endika-llonin-abasolo" target="_blank">
-      linkedin
+      LinkedIn
     </a>
   </li>
   <li>
@@ -11,7 +13,7 @@
   </li>
   <li class="download-link">
     <a href="../assets/pdf/CV-Maquetador-web_Endika-Llonin-Abasolo.pdf" download title="Se descargará mi curriculumn en formato PDF" class="rrss rrss-cv">
-      Currículum [PDF]
+      Currículum (PDF)
     </a>
   </li>
 </ul>
