--- a/src/app/components/contacto/contacto.component.scss
+++ b/src/app/components/contacto/contacto.component.scss
@@ -17,13 +17,11 @@ $anim-speed: 270ms;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
     flex-wrap: wrap;
+    margin-bottom: 4rem;
     li{
         position: relative;
-        margin-top: 1.1rem;
-        margin-bottom: .5rem;
-        margin-right: 1rem;
+        margin: 1rem;
         opacity: 0;
         animation: rrss-in $anim-speed linear;
         animation-fill-mode: forwards;
@@ -33,22 +31,22 @@ $anim-speed: 270ms;
             }
         }
         &:not(:last-child){
-            margin-right: 2rem;
+            margin-right: 1rem;
             
         }
         &:last-child{
             .rrss{
-                padding-left: 4rem;
-                padding-right: 4rem;
+                padding-left: 3rem;
+                padding-right: 3rem;
             }
         }
         .rrss{
             display: flex;
             flex-direction: column;
             align-items: center;
-            font-size: $font-xl;
+            font-size: 1.1rem;
             text-decoration: none;
-            font-weight: 400;
+            font-weight: 100;
             border: 1px solid rgba(255, 255, 255, 0.1);
             padding: 3rem 5rem;
             border-radius: 4px;
@@ -95,12 +93,7 @@ $anim-speed: 270ms;
                 
             }
         }
-        &:hover{
-            &:after{
-                transform: scale(1.15);
-            }
-            
-        }
+        
     }
 }
 
@@ -110,21 +103,28 @@ $anim-speed: 270ms;
     &:after{
         content:"";
         display: block;
-        width: 20px;
-        height: 20px;
+        width: 28px;
+        height: 10px;
         background-image: url('../../../assets/images/icons/download-icon.svg');
         background-repeat: no-repeat;
         background-position: center;
-        background-size: contain;
-        margin-left: .6rem;
         position: absolute;
-        top: -10px;
-        right: -5px;
-        background-color: $proyectos-bg;
-        padding: .5rem;
-        border-radius: 50%;
-        background-size: 50%;
-        transition: ease-in .1s;
+        bottom: -12px;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: #cfbebb;
+        filter: invert(1);
+        padding: 0.5rem;
+        border-radius: 100px;
+        background-size: 38%;
+        transition: ease-in 0.1s;
+    }
+    &:hover{
+        &:after{
+            background-color: white;
+            filter: invert(0);
+        }
+        
     }
 }
 
@@ -149,16 +149,26 @@ $anim-speed: 270ms;
     .contact-container{
         flex-direction: column;
         align-items: inherit;
+        width: 100%;
+        margin-bottom: 1rem;
         li{
+            width: 100%;
+            
+            margin-top: 0px;
+            margin-bottom: 1rem;
             &:not(:last-child){
                 margin-right: 0rem;
+                margin-left: 0rem;
                 
             }
             &:last-child{
-                margin-right: 0px;
+                margin-right: 0rem;
+                margin-left: 0rem;
+                margin-bottom: 2rem;
                 .rrss{
                     padding-left: 2rem;
                     padding-right: 2rem;
+                    padding-bottom: 2rem;
                 }
             }
             .rrss{
