--- a/src/app/components/proyecto-detail/proyecto-detail.component.scss
+++ b/src/app/components/proyecto-detail/proyecto-detail.component.scss
@@ -22,6 +22,9 @@
     .detail-info-container{
         max-width: 400px;
         padding-right: 2rem;
+        position: sticky;
+        top: 1rem;
+        height: fit-content;
         h1{
             font-family: $font-b-regular;
             font-weight: 600;
@@ -139,6 +142,9 @@
             padding-right: 0px;
             order: 1;
             margin-bottom: 1rem;
+            position: relative;
+            top: inherit;
+            height: auto;
             h1{
                 margin-top: 0px;
                 font-size: 2rem;
