--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,15 @@ main{
     }
 }
 
+input,
+textarea,
+button,
+select,
+div,
+a {
+  -webkit-tap-highlight-color: transparent;
+}
+
 a{
     color: $accent-color;
 }
@@ -41,7 +50,7 @@ p{
     font-family: $font-a-regular;
     font-weight: 100;
     font-size: 1rem;
-    line-height: 28px;
+    line-height: 26px;
     letter-spacing: 0.3px;
     a{
         font-family: $font-a-regular;
@@ -67,7 +76,7 @@ ul{
         display: block;
     }
     main{
-        padding: 2rem 1.5rem 2rem 1.5rem;
+        padding: 2rem 1rem 2rem 1rem;
         width: 100%;
     }
     .only-responsive{
