--- a/src/app/components/presentacion/presentacion.component.html
+++ b/src/app/components/presentacion/presentacion.component.html
@@ -5,7 +5,7 @@
             Te aviso, en el siguiente texto voy a soltar un poco de chapa, si prefieres saltarla porque piensas que ojeando mis trabajos vas a conocerme mejor, adelante... <a [routerLink]="['/proyectos']">mis proyectos</a>.
         </p>
         <p>
-            Soy Endika, un apasionado de la maquetación, el diseño y las nuevas tecnologías. Aunque llevo ya tiempo que también me está enganchando en gran medida el desarrollo mediante los Frameworks de Javascript. Prueba de ello es esta misma web, la cual ha sido creada mediante Angular queriendo cacharrear un poquillo.
+            Soy Endika, un apasionado de la maquetación, el diseño y las nuevas tecnologías. Aunque llevo ya tiempo que me está enganchando el desarrollo mediante los Frameworks de Javascript. Prueba de ello es esta misma web, la cual ha sido creada mediante Angular queriendo cacharrear un poquillo.
         </p>
         <p>
             Aun siendo un maquetador puro y no haberme forjado como programador en mi vida laboral, sí que realice un Grado Superior de Desarrollo de Aplicaciones Web (DAW), gracias al cual, adquirí ciertos conocimientos de programación que hasta el día de hoy me han servido para poder facilitar el trabajo y la comunicación entre diseñadores y programadores. Aunque insisto, no me considero programador, al menos por ahora. Sí que puedo decir, que sé lo bastante como para realizar labores avanzadas de maquetación, ya sea manipulando el DOM mediante Javascript o JQuery.
