--- a/src/app/components/presentacion/presentacion.component.html
+++ b/src/app/components/presentacion/presentacion.component.html
@@ -2,16 +2,13 @@
     <div class="presentation-content">
         <h2>¡Hola, encantado de recibirte!</h2>
         <p>
-            Te aviso, en el siguiente texto voy a soltar un poco de chapa, si prefieres saltarla porque piensas que ojeando mis trabajos vas a conocerme mejor, adelante... <a [routerLink]="['/proyectos']">mis proyectos</a>.
+            Soy Endika, un apasionado de la maquetación web y las nuevas tecnologías. Con más de una década de experiencia laboral como maquetador, he tenido el privilegio de ir explorarando el mundo de los frameworks de JavaScript para llevar a cabo proyectos apasionantes, porcierto aqui puedes ojear <a [routerLink]="['/proyectos']">mis proyectos</a> en los que he participado.
         </p>
         <p>
-            Soy Endika, un apasionado de la maquetación, el diseño y las nuevas tecnologías. Aunque llevo ya tiempo que me está enganchando el desarrollo mediante los Frameworks de Javascript. Prueba de ello es esta misma web, la cual ha sido creada mediante Angular queriendo cacharrear un poquillo.
+            Aunque mi enfoque principal ha sido la maquetación web, completé con éxito un Grado Superior en Desarrollo de Aplicaciones Web (DAW) para ampliar mis conocimientos en programación. Aunque no me considero un programador, si que poseo habilidades que me permiten llevar a cabo tareas avanzadas de maquetación y desarrollo.
         </p>
         <p>
-            Aun siendo un maquetador puro y no haberme forjado como programador en mi vida laboral, sí que realice un Grado Superior de Desarrollo de Aplicaciones Web (DAW), gracias al cual, adquirí ciertos conocimientos de programación que hasta el día de hoy me han servido para poder facilitar el trabajo y la comunicación entre diseñadores y programadores. Aunque insisto, no me considero programador, al menos por ahora. Sí que puedo decir, que sé lo bastante como para realizar labores avanzadas de maquetación, ya sea manipulando el DOM mediante Javascript o JQuery.
-        </p>
-        <p>
-            Actualmente, ocupo una posición laboral como analista en maquetación web y experto en experiencia de usuario y diseño. Aun así, he de ser sincero al decir que mi principal pasión es la maquetación, y es por lo que me mantengo a la escucha cuando aparecen nuevas oportunidades laborales que me permitan seguir creciendo junto a grandes profesionales.
+            En este momento, me estoy permitiendo tomarme un tiempo para centrarme en la actualización y la adquisición de nuevas competencias en cuanto al desarrollo Front-End. Mi historial incluye una posición como analista en maquetación web y experto en experiencia de usuario, pero mi pasión radica en el aprendizaje continuo y el crecimiento. Tambien estoy en búsqueda de una empresa que valore mi pasión por la maquetación y el desarrollo y ofrezca un entorno en el que pueda seguir creciendo junto a un buen equipo.
         </p>
     </div>
     
